--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -30,4 +30,13 @@ jobs:
         
             - name: Run code formatting check
               run: pdm run check_code_format
+
+            - name: Run CalculatorApp test
+              run: pdm run test_calculator
+
+            - name: Run Main App tests
+              run: pdm run tests
+              
+            - name: Run coverage report
+              run: pdm run coverage_report
         
