--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ prod = 'pdm run python app/manage.py runserver'
 migrate = 'pdm run python app/manage.py migrate'
 make_migration = 'pdm run python app/manage.py makemigrations'
 test_calculator = "pdm run coverage run --source='.' app/manage.py test calculator"
+tests = "pdm run coverage run --source='.' app/manage.py test"
 coverage_report = 'pdm run coverage report'
 check_code_format = 'black --check app/'
 format_code = 'black app/'
