--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -10,6 +10,22 @@ jobs:
     tests:
         runs-on:
             - ubuntu-latest
+        services:
+            mysql:
+                image: mysql:latest
+                ports:
+                    - 3306:3306
+                env:
+                    MYSQL_ROOT_PASSWORD: rootpassword
+                    MYSQL_DATABASE: test_db
+                    MYSQL_USER: test_user
+                    MYSQL_PASSWORD: test_password
+                options: >-
+                    --health-cmd="mysqladmin ping --silent"
+                    --health-interval=10s
+                    --health-timeout=5s
+                    --health-retries=3
+
         steps:
             - name: Checkout code
               uses: actions/checkout@v3
