--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,8 @@ dev = [
     "black>=22.8.0",
     "pydantic>=2.0.0",
     "pymysql>=1.1.1",
-    "coverage>=7.5.3"
+    "coverage>=7.5.3",
+    "python-dotenv>=1.0.0"
 ]
 
 [tool.pdm.scripts]
