--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -18,13 +18,7 @@ jobs:
                 env:
                     MYSQL_ROOT_PASSWORD: rootpassword
                     MYSQL_DATABASE: test_db
-                    MYSQL_USER: test_user
-                    MYSQL_PASSWORD: test_password
-                options: >-
-                    --health-cmd="mysqladmin ping --silent"
-                    --health-interval=10s
-                    --health-timeout=5s
-                    --health-retries=3
+                    
 
         steps:
             - name: Checkout code
@@ -44,6 +38,9 @@ jobs:
             - name: Install dependencies
               run: pdm install
         
+            - name: Set environment variables
+              run: echo "DJANGO_ENV=test" >> $GITHUB_ENV
+
             - name: Run code formatting check
               run: pdm run check_code_format
 
