--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -41,23 +41,23 @@ jobs:
             - name: Set environment variables
               run: echo "DJANGO_ENV=test" >> $GITHUB_ENV
 
-            - name: Create MySQL user with native password
-              run: |
-                sudo apt-get install -y mysql-client
-                mysql -h localhost -u root -ptest_password -e "CREATE USER 'test_user'@'%' IDENTIFIED WITH mysql_native_password BY 'test_password';"
-                mysql -h localhost -u root -ptest_password -e "GRANT ALL PRIVILEGES ON test_db.* TO 'test_user'@'%';"
-                mysql -h localhost -u root -ptest_password -e "FLUSH PRIVILEGES;"
+            # - name: Create MySQL user with native password
+            #   run: |
+            #     sudo apt-get install -y mysql-client
+            #     mysql -h localhost -u root -ptest_password -e "CREATE USER 'test_user'@'%' IDENTIFIED WITH mysql_native_password BY 'test_password';"
+            #     mysql -h localhost -u root -ptest_password -e "GRANT ALL PRIVILEGES ON test_db.* TO 'test_user'@'%';"
+            #     mysql -h localhost -u root -ptest_password -e "FLUSH PRIVILEGES;"
 
 
             - name: Run code formatting check
               run: pdm run check_code_format
 
-            - name: Run CalculatorApp test
-              run: pdm run test_calculator
+            # - name: Run CalculatorApp test
+            #   run: pdm run test_calculator
 
-            - name: Run Main App tests
-              run: pdm run tests
+            # - name: Run Main App tests
+            #   run: pdm run tests
               
-            - name: Run coverage report
-              run: pdm run coverage_report
+            # - name: Run coverage report
+            #   run: pdm run coverage_report
         
